--- a/Wookiee.Service/Wookiee.Service.csproj
+++ b/Wookiee.Service/Wookiee.Service.csproj
@@ -6,6 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
+
   <ItemGroup>
     <Folder Include="Interface\" />
     <Folder Include="Implementation\" />
